--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.0.1",
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./build/ckeditor.js",
+  "files": [
+	  "build"
+  ],
   "devDependencies": {
     "@ckeditor/ckeditor5-alignment": "^31.0.0",
     "@ckeditor/ckeditor5-autoformat": "^31.0.0",
@@ -49,9 +52,14 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+	"preversion": "npm run build"
   },
   "dependencies": {},
+  "engines": {
+	  "node": ">=14.15.0",
+	  "npm": ">=6.14.8"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DrakeGoCoding/ckeditor-custom-build.git"
