--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./build/ckeditor.js",
   "files": [
-	  "build"
+    "build"
   ],
   "devDependencies": {
     "@ckeditor/ckeditor5-alignment": "^31.0.0",
@@ -53,12 +53,14 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-	"preversion": "npm run build"
+    "preversion": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sanitize-html": "^2.6.1"
+  },
   "engines": {
-	  "node": ">=14.15.0",
-	  "npm": ">=6.14.8"
+    "node": ">=14.15.0",
+    "npm": ">=6.14.8"
   },
   "repository": {
     "type": "git",
