--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@drakegocoding/ckeditor5-custom-build",
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
-  "version": "0.0.3",
+  "version": "0.1.1",
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "./build/ckeditor.js",
   "files": [
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-block-quote": "^31.0.0",
     "@ckeditor/ckeditor5-cloud-services": "^31.0.0",
     "@ckeditor/ckeditor5-code-block": "^31.0.0",
+    "@ckeditor/ckeditor5-core": "^31.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^25.4.5",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^25.4.5",
     "@ckeditor/ckeditor5-editor-classic": "^31.0.0",
@@ -41,6 +42,7 @@
     "@ckeditor/ckeditor5-theme-lark": "^31.0.0",
     "@ckeditor/ckeditor5-typing": "^31.0.0",
     "@ckeditor/ckeditor5-upload": "^31.0.0",
+    "@ckeditor/ckeditor5-utils": "^31.0.0",
     "@ckeditor/ckeditor5-word-count": "^31.0.0",
     "css-loader": "^5.2.7",
     "postcss": "^8.3.11",
